--- a/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
+++ b/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
@@ -6,6 +6,180 @@
 	<array>
 		<dict>
 			<key>temperament</key>
+			<string>Scared</string>
+			<key>guardPathNodeNames</key>
+			<array>
+				<string>policeBot_guard_01</string>
+				<string>policeBot_guard_02</string>
+			</array>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>protestorBot_good_01</string>
+				<string>protestorBot_good_02</string>
+				<string>protestorBot_good_03</string>
+				<string>protestorBot_good_04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>protestorBot_bad_01</string>
+				<string>protestorBot_bad_02</string>
+				<string>protestorBot_bad_03</string>
+				<string>protestorBot_bad_04</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>botType</key>
+			<string>protestor</string>
+		</dict>
+		<dict>
+			<key>temperament</key>
+			<string>Fearful</string>
+			<key>guardPathNodeNames</key>
+			<array>
+				<string>policeBot_guard_01</string>
+				<string>policeBot_guard_02</string>
+			</array>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>protestorBot_good_01</string>
+				<string>protestorBot_good_02</string>
+				<string>protestorBot_good_03</string>
+				<string>protestorBot_good_04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>protestorBot_bad_01</string>
+				<string>protestorBot_bad_02</string>
+				<string>protestorBot_bad_03</string>
+				<string>protestorBot_bad_04</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>botType</key>
+			<string>protestor</string>
+		</dict>
+		<dict>
+			<key>temperament</key>
+			<string>Calm</string>
+			<key>guardPathNodeNames</key>
+			<array>
+				<string>policeBot_guard_01</string>
+				<string>policeBot_guard_02</string>
+			</array>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>protestorBot_good_01</string>
+				<string>protestorBot_good_02</string>
+				<string>protestorBot_good_03</string>
+				<string>protestorBot_good_04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>protestorBot_bad_01</string>
+				<string>protestorBot_bad_02</string>
+				<string>protestorBot_bad_03</string>
+				<string>protestorBot_bad_04</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>botType</key>
+			<string>protestor</string>
+		</dict>
+		<dict>
+			<key>temperament</key>
+			<string>Aggitated</string>
+			<key>guardPathNodeNames</key>
+			<array>
+				<string>policeBot_guard_01</string>
+				<string>policeBot_guard_02</string>
+			</array>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>protestorBot_good_01</string>
+				<string>protestorBot_good_02</string>
+				<string>protestorBot_good_03</string>
+				<string>protestorBot_good_04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>protestorBot_bad_01</string>
+				<string>protestorBot_bad_02</string>
+				<string>protestorBot_bad_03</string>
+				<string>protestorBot_bad_04</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>botType</key>
+			<string>protestor</string>
+		</dict>
+		<dict>
+			<key>temperament</key>
+			<string>Angry</string>
+			<key>guardPathNodeNames</key>
+			<array>
+				<string>policeBot_guard_01</string>
+				<string>policeBot_guard_02</string>
+			</array>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>protestorBot_good_01</string>
+				<string>protestorBot_good_02</string>
+				<string>protestorBot_good_03</string>
+				<string>protestorBot_good_04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>protestorBot_bad_01</string>
+				<string>protestorBot_bad_02</string>
+				<string>protestorBot_bad_03</string>
+				<string>protestorBot_bad_04</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>botType</key>
+			<string>protestor</string>
+		</dict>
+		<dict>
+			<key>temperament</key>
+			<string>Violent</string>
+			<key>guardPathNodeNames</key>
+			<array>
+				<string>policeBot_guard_01</string>
+				<string>policeBot_guard_02</string>
+			</array>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>protestorBot_good_01</string>
+				<string>protestorBot_good_02</string>
+				<string>protestorBot_good_03</string>
+				<string>protestorBot_good_04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>protestorBot_bad_01</string>
+				<string>protestorBot_bad_02</string>
+				<string>protestorBot_bad_03</string>
+				<string>protestorBot_bad_04</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>botType</key>
+			<string>protestor</string>
+		</dict>
+		<dict>
+			<key>temperament</key>
 			<string>Calm</string>
 			<key>guardPathNodeNames</key>
 			<array>
@@ -33,7 +207,7 @@
 		</dict>
 		<dict>
 			<key>temperament</key>
-			<string>Calm</string>
+			<string>Rage</string>
 			<key>guardPathNodeNames</key>
 			<array>
 				<string>policeBot_guard_01</string>
